2007-07-23  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-message-function): New variable.
	(isearch-update, isearch-search): Use it.

	* simple.el (goto-history-element): New function created from
	next-history-element.
	(next-history-element): Most code moved to goto-history-element.
	Call goto-history-element with (- minibuffer-history-position n).
	(previous-history-element): Call goto-history-element with (+
	minibuffer-history-position n).
	(minibuffer-setup-hook): Add minibuffer-history-isearch-setup.
	(minibuffer-history-isearch-message-overlay): New buffer-local variable.
	(minibuffer-history-isearch-setup, minibuffer-history-isearch-end)
	(minibuffer-history-isearch-search, minibuffer-history-isearch-message)
	(minibuffer-history-isearch-wrap, minibuffer-history-isearch-push-state)
	(minibuffer-history-isearch-pop-state): New functions.

2007-07-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc-hooks.el (vc-stay-local-p): Fix bug: Avoid remove-if-not.
	Also, if FILE is a list, return non-nil if any of its elements
	should stay local.  Update docstring.

2007-07-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/copyright.el (copyright-update-year): Fix 2007-05-25 change.

2007-07-23  Richard Stallman  <rms@gnu.org>

	* progmodes/octave-inf.el (inferior-octave-prompt): Accept .exe.

2007-07-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-checkin): Delete unused parameter and the code
	handling it. Use vc-git-command.
	(vc-git-find-version, vc-git-diff-tree): New functions.
	(vc-git-revert): Use vc-git-command.
	(vc-git--run-command): Delete.

2007-07-23  Alexandre Julliard <julliard@winehq.org>

	* vc-git.el (vc-git-workfile-unchanged-p): Update comment.

2007-07-20  Kenichi Handa  <handa@m17n.org>

	* international/utf-8.el (utf-8-post-read-conversion): Temporarily
	bind utf-8-compose-scripts to nil while running *-compose-region
	functions.

2007-07-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el: Update status.