@@ -1,3 +1,11 @@
+2007-07-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-perl-file-attributes)
+	(tramp-perl-directory-files-and-attributes)
+	(tramp-handle-file-attributes-with-stat)
+	(tramp-handle-directory-files-and-attributes-with-stat(
+	(tramp-convert-file-attributes): Handle huge file sizes.
+
 2007-07-23  Juri Linkov  <juri@jurta.org>
 
 	* isearch.el (isearch-message-function): New variable.
